add methods to client
